EKS/manifests/todo-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-deploy
  namespace: ns1
  labels:
    app: todo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: django-todo-app
        image: uj5ghare/django-todo-app
        ports:
        - name: http
          containerPort: 8000
        imagePullPolicy: IfNotPresent
      nodeSelector:
        kubernetes.io/os: linux
